--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -58,7 +58,7 @@
                     <key>Comment</key>
                     <string>SSDT-USB-Reset.aml</string>
                     <key>Enabled</key>
-                    <true/>
+                    <false/>
                     <key>Path</key>
                     <string>SSDT-USB-Reset.aml</string>
                 </dict>
@@ -69,14 +69,6 @@
                     <true/>
                     <key>Path</key>
                     <string>SSDT-USBX.aml</string>
-                </dict>
-                <dict>
-                    <key>Comment</key>
-                    <string></string>
-                    <key>Enabled</key>
-                    <false/>
-                    <key>Path</key>
-                    <string>DMAR.aml</string>
                 </dict>
                 <dict>
                     <key>Comment</key>
@@ -93,6 +85,14 @@
                     <true/>
                     <key>Path</key>
                     <string>SSDT-SBUS-MCHC.aml</string>
+                </dict>
+                <dict>
+                    <key>Comment</key>
+                    <string></string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Path</key>
+                    <string>SSDT-AWAC.aml</string>
                 </dict>
             </array>
             <key>Delete</key>
@@ -915,7 +915,7 @@
                     <key>Arch</key>
                     <string>Any</string>
                     <key>BundlePath</key>
-                    <string>USBX99-12Ports.kext</string>
+                    <string>USBMapX99-E5.kext</string>
                     <key>Comment</key>
                     <string>V1.0</string>
                     <key>Enabled</key>
